--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <style>
-      img{border-radius: 50%}
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <table cellspacing="20">
@@ -13,10 +11,12 @@
         <td><img height="200px" border-radius="50px" src="https://miro.medium.com/max/3150/1*8OkdLpw_7VokmSrzwXLnbg.jpeg" alt="img of me"></td>
         <td><h1>Hi. I'm Andrew Crawford-Driver</h1>
         <p><i>begiener programmer</i></p>
-        <p>My dream is to be a real world programer and travel the world along with my best friend</p></td>
+        <p>My dream is to https://www.youtube.com/watch?v=dQw4w9WgXcQ</p></td>
       </tr>
     </table>
-
+    <div class="rickroll">
+      <iframe width="420" height="345" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ"></iframe>
+    </div>
 
   <hr>
     <h2>Current goals/progects</h2>
@@ -26,7 +26,7 @@
     </ul>
     <hr>
     <h2>Work experience</h2>
-    <table border="2px">
+    <table border="3px solid" style="border-color: #ceedf2;">
       <tr>
         <td>Dates</td>
         <td>Work</td>
@@ -40,7 +40,9 @@
         <td>I did a course</td>
       </tr>
     </table>
+
     <hr>
+
     <h3>Skills</h3>
     <table>
       <tr>
@@ -59,5 +61,8 @@
     <footer>
       <p><a href="My-Works-Hub.html">My other works</a> or <a href="Contact-Me.html">contact me</a></p>
     </footer>
+    <script>
+    //if(document.getElementById("rickroll").classList.contains("hidden")){console.log(worked)}
+    </script>
   </body>
 </html>
