--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>Contact Me At</h1>
@@ -19,5 +20,6 @@
       <textarea name="Your-Message" rows="8" cols="30"></textarea><br>
       <input type="submit" name="">
     </form>
+    <footer><p><a href="index.html">index</a></p></footer>
   </body>
 </html>
